refactor(backend): rebuild as two services on a shared platform kernel
Replaces the single com.example application with a Maven multi-module build:
platform-core (shared kernel), iam-service (:9843) and business-service (:9844).
The frontend is untouched.

Architecture
- platform-core is auto-configured into both services and owns JWT issuing and
  verification, the request context, RFC 7807 error handling, correlation ids,
  the operator landing/error pages and the logging configuration.
- iam-service carries no cadastral domain coupling, so it lifts out whole as an
  IAM starter for another project.
- business-service verifies the token IAM signed with the same key and never
  calls back, so the two deploy and scale independently.

Data
- Drops the listacomuni and tables tables and data.sql. Geography now comes from
  the live Comuni-ITA API behind a configurable cache, because a committed copy
  goes stale when comuni merge and the upstream offers no server-side search.
- Merges the disconnected form and tables rows into one asset_registration
  aggregate. Three domain tables remain, owned by Flyway with ddl-auto=validate.
- Adds the guided lookup cascade: region narrows province, province narrows
  municipality, municipality narrows street, street narrows postcode, and the
  municipality narrows the responsible body. Every filter is optional.

Security
- Refresh token rotation with reuse detection; reuse revokes the whole session
  family in a separate transaction, since the 401 rolls the request back.
- Account lockout kept distinct from an administrator lock, no account
  enumeration on sign-in or recovery, single-use activation and reset tokens.
- Every secret reads from the environment; a signing key under 64 characters
  refuses to boot.

Also
- Swagger annotations moved into API interfaces, leaving controllers as thin
  adapters. MapStruct mappers, records for every DTO.
- Landing page reads real Actuator health and Micrometer meters.
- Security failures a